Tugas day 13 project01

--- a/anggota-tambah.html
+++ b/anggota-tambah.html
@@ -209,7 +209,7 @@
                                 <!-- .card-body -->
                                 <div class="card-body text-center">
                                     <div class="text-center" class="d-sm-flex align-items-center justify-content-between mb-4">
-									  <img class="border border-secondary" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973461_960_720.png" class="rounded" alt="..." width="200px">
+									  <img class="border border-secondary" src="img/pf.png" class="rounded" alt="..." width="200px">
 									</div><br>
 				                        <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
 				                            <i class="fas fa-upload fa-sm"></i>
