--- a/anggota.html
+++ b/anggota.html
@@ -243,6 +243,18 @@
                                                     </td>
                                                     </td>
                                                 </tr>
+                                                <tr>
+                                                    <td>5</td>
+                                                    <td>Samuel Bosawer</td>
+                                                    <td>Dosay, Sentani barat, Kota Jayapura, Papua</td>
+                                                    <td>Samuel@gmail.com</td>
+                                                    <td>
+                                                        <a href="anggota-detail.html" class="btn btn-primary">Detail</a>
+                                                        <a href="anggota-ubah.html" class="btn btn-success">Ubah</a>
+                                                        <a href="anggota-hapus.html" class="btn btn-danger">Hapus</a>
+                                                    </td>
+                                                    </td>
+                                                </tr>
                                             </tbody>
                                         </table>
                                     </div>
