--- a/anggota-tambah.html
+++ b/anggota-tambah.html
@@ -190,12 +190,19 @@
 			                                <label for="address"></label>
 			                                <div class="invalid-feedback" data-sb-feedback="address:required">A message is required.</div>
                             			</div>
-	                            			<div>
-	                            				<a target="_blank" href="https://github.com/">GitHub</a>
-	                            			</div>
-	                            			<div>
-	                            				<a target="_blank" href="https://www.instagram.com/">Instagram</a>
-	                            			</div>
+                                        <div class="form-floating mb-3">
+                                            <input class="form-control" id="github" type="text" placeholder="GitHub" data-sb-validations="required,github" />
+                                            <label for="github"></label>
+                                            <div class="invalid-feedback" data-sb-feedback="github:required">An email is required.</div>
+                                            <div class="invalid-feedback" data-sb-feedback="github:github">Email is not valid.</div>
+                                        </div>
+                                        <div class="form-floating mb-3">
+                                            <input class="form-control" id="instagram" type="text" placeholder="Instagram" data-sb-validations="required,instagram" />
+                                            <label for="instagram"></label>
+                                            <div class="invalid-feedback" data-sb-feedback="instagram:required">An email is required.</div>
+                                            <div class="invalid-feedback" data-sb-feedback="instagram:instagram">Email is not valid.</div>
+                                        </div>
+	                            			
                                     </form>
                                 </div>
                                 <!-- end .card-body -->
@@ -222,7 +229,7 @@
 
                         </div>
 
-                        <div class="col-xl-10"><hr class="btn-block"></div>
+                        <div class="col-xl-12"><hr class="btn-block"></div>
                         
                         <div class="col-auto">
                         	<div class="d-sm-flex align-items-center justify-content-between mb-4">
